--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
     <span class="ctrl" id="style">style</span>
   </div>
   <div id="viewer"></div>
-  <script src="js/three.js"></script>
-  <script src="js/OrbitControls.js"></script>
-  <script src="js/STLLoader.js"></script>
-  <script src="js/helvetiker_regular.typeface.js"></script>
+
+  <!-- lib -->
+  <script src="js/lib/three.js"></script>
+  <script src="js/lib/OrbitControls.js"></script>
+  <script src="js/lib/STLLoader.js"></script>
+
+  <!-- fonts -->
+  <script src="js/fonts/helvetiker/helvetiker_regular.typeface.js"></script>
+  <script src="js/fonts/helvetiker/helvetiker_bold.typeface.js"></script>
+  <script src="js/fonts/helvetiker/helvetiker_italic.typeface.js"></script>
+  <script src="js/fonts/optimer/optimer_regular.typeface.js"></script>
+  <script src="js/fonts/optimer/optimer_bold.typeface.js"></script>
+  <script src="js/fonts/optimer/optimer_italic.typeface.js"></script>
+  <script src="js/fonts/gentilis/gentilis_regular.typeface.js"></script>
+  <script src="js/fonts/gentilis/gentilis_bold.typeface.js"></script>
+  <script src="js/fonts/gentilis/gentilis_italic.typeface.js"></script>
+
   <script src="js/tresd.js"></script>
 </body>
 </html>
